--- a/components/m-icon/icon.less
+++ b/components/m-icon/icon.less
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3645649 */
-  src: url('//at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.woff2?t=1746443775635') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.woff?t=1746443775635') format('woff'),
-       url('//at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.ttf?t=1746443775635') format('truetype'),
-       url('//at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.svg?t=1746443775635#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.woff2?t=1746443775635') format('woff2'),
+       url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.woff?t=1746443775635') format('woff'),
+       url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.ttf?t=1746443775635') format('truetype'),
+       url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.svg?t=1746443775635#iconfont') format('svg');
 }
 
 .iconfont {
