✨ feat: 首页异常处理

--- a/components/m-icon/icon.less
+++ b/components/m-icon/icon.less
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3645649 */
-  src: url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.woff2?t=1746443775635') format('woff2'),
-       url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.woff?t=1746443775635') format('woff'),
-       url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.ttf?t=1746443775635') format('truetype'),
-       url('https://at.alicdn.com/t/c/font_3645649_ybd5uxf3yw.svg?t=1746443775635#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.woff2?t=1746951079651') format('woff2'),
+       url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.woff?t=1746951079651') format('woff'),
+       url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.ttf?t=1746951079651') format('truetype'),
+       url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.svg?t=1746951079651#iconfont') format('svg');
 }
 
 .iconfont {
@@ -13,6 +13,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-empty:before {
+  content: "\e600";
+}
+
 
 .icon-fenxiang:before {
   content: "\e6cd";
