--- a/styles/reset.less
+++ b/styles/reset.less
@@ -139,44 +139,44 @@ span {
   --v-color-blue-10: #002266;
   --v-color-blue-11: #000C24;
 
-  /* Red Colors */
-  --v-color-red-1 : #FFFBFB;
-  --v-color-red-2 : #FFECEE;
-  --v-color-red-3 : #FFD9DC;
-  --v-color-red-4 : #FFB3B9;
-  --v-color-red-5 : #FF8D97;
-  --v-color-red-6 : #FF6774;
-  --v-color-red-7 : #FF4252;
-  --v-color-red-8 : #E53B49;
-  --v-color-red-9 : #992731;
-  --v-color-red-10: #661A20;
-  --v-color-red-11: #330D10;
+  /* danger Colors */
+  --v-color-danger-1 : #FFFBFB;
+  --v-color-danger-2 : #FFECEE;
+  --v-color-danger-3 : #FFD9DC;
+  --v-color-danger-4 : #FFB3B9;
+  --v-color-danger-5 : #FF8D97;
+  --v-color-danger-6 : #FF6774;
+  --v-color-danger-7 : #FF4252;
+  --v-color-danger-8 : #E53B49;
+  --v-color-danger-9 : #992731;
+  --v-color-danger-10: #661A20;
+  --v-color-danger-11: #330D10;
 
-  /* Green Colors */
-  --v-color-green-1 : #FAFEFC;
-  --v-color-green-2 : #E6FAF0;
-  --v-color-green-3 : #CCF5E2;
-  --v-color-green-4 : #99ECC5;
-  --v-color-green-5 : #66E3A8;
-  --v-color-green-6 : #33DA8B;
-  --v-color-green-7 : #00D16E;
-  --v-color-green-8 : #00BB62;
-  --v-color-green-9 : #007D42;
-  --v-color-green-10: #00532C;
-  --v-color-green-11: #002916;
+  /* success Colors */
+  --v-color-success-1 : #FAFEFC;
+  --v-color-success-2 : #E6FAF0;
+  --v-color-success-3 : #CCF5E2;
+  --v-color-success-4 : #99ECC5;
+  --v-color-success-5 : #66E3A8;
+  --v-color-success-6 : #33DA8B;
+  --v-color-success-7 : #00D16E;
+  --v-color-success-8 : #00BB62;
+  --v-color-success-9 : #007D42;
+  --v-color-success-10: #00532C;
+  --v-color-success-11: #002916;
 
   /* Yellow Colors */
-  --v-color-yellow-1 : #FFFDFA;
-  --v-color-yellow-2 : #FFF5E6;
-  --v-color-yellow-3 : #FFECCC;
-  --v-color-yellow-4 : #FFDA99;
-  --v-color-yellow-5 : #FFC766;
-  --v-color-yellow-6 : #FFB533;
-  --v-color-yellow-7 : #FFA300;
-  --v-color-yellow-8 : #E59200;
-  --v-color-yellow-9 : #996100;
-  --v-color-yellow-10: #664100;
-  --v-color-yellow-11: #332000;
+  --v-color-warning-1 : #FFFDFA;
+  --v-color-warning-2 : #FFF5E6;
+  --v-color-warning-3 : #FFECCC;
+  --v-color-warning-4 : #FFDA99;
+  --v-color-warning-5 : #FFC766;
+  --v-color-warning-6 : #FFB533;
+  --v-color-warning-7 : #FFA300;
+  --v-color-warning-8 : #E59200;
+  --v-color-warning-9 : #996100;
+  --v-color-warning-10: #664100;
+  --v-color-warning-11: #332000;
 
   /* Purple Colors */
   --v-color-purple-1 : #FEFAFE;
