✨ feat: 登录兼容处理

--- a/styles/reset.less
+++ b/styles/reset.less
@@ -204,6 +204,19 @@ span {
   --v-color-primary-10: #662904;
   --v-color-primary-11: #331402;
 
+
+  --v-color-zlv-1: #fcfefe;
+  --v-color-zlv-2: #f2fcfd;
+  --v-color-zlv-3: #ddf7fa;
+  --v-color-zlv-4: #bbeff4;
+  --v-color-zlv-5: #98e6ef;
+  --v-color-zlv-6: #76dee9;
+  --v-color-zlv-7: #54d6e4;
+  --v-color-zlv-8: #4bc0cd;
+  --v-color-zlv-9: #494242;
+  --v-color-zlv-10: #22565b;
+  --v-color-zlv-11: #112b2e;
+
 }
 
 page {
