--- a/components/m-icon/icon.less
+++ b/components/m-icon/icon.less
@@ -1,16 +1,17 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 3645649 */
-  src: url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.woff2?t=1746951079651') format('woff2'),
-       url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.woff?t=1746951079651') format('woff'),
-       url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.ttf?t=1746951079651') format('truetype'),
-       url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.svg?t=1746951079651#iconfont') format('svg');
+  font-family: "iconfont";
+  /* Project id 3645649 */
+  src        : url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.woff2?t=1746951079651') format('woff2'),
+    url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.woff?t=1746951079651') format('woff'),
+    url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.ttf?t=1746951079651') format('truetype'),
+    url('https://at.alicdn.com/t/c/font_3645649_f5j4f9jb4sa.svg?t=1746951079651#iconfont') format('svg');
 }
 
 .iconfont {
-  font-family: "iconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
+  font-family            : "iconfont" !important;
+  font-size              : 16px;
+  font-style             : normal;
+  -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
